# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./projects";
 export * from "./documents";
 export * from "./hr";
 export * from "./activity";
+export * from "./meetings";
